fix mentor image sized with css. fixed some weird layout bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,11 @@ body {
     padding: 20px;
 }
 
+.mentors img {
+    width: 200px;
+    height: 200px;
+}
+
 .boast {
     background: lightyellow;
 }
